[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/textures/battle/characters/cultist_gun.png" type="Texture" id=1]
[ext_resource path="res://src/entities/player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/entities/bullet/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/textures/battle/characters/cultist.png" type="Texture" id=5]
[ext_resource path="res://src/entities/bullet/MeleeBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/effects/DashTrailEffect.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/dash.wav" type="AudioStream" id=8]
[ext_resource path="res://src/effects/CultistDeathEffect.tscn" type="PackedScene" id=9]


[sub_resource type="Animation" id=1]
resource_name = "Blink"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.556863 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gun:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Blink"

[sub_resource type="AnimationNodeOneShot" id=7]

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Dash"

[sub_resource type="AnimationNodeBlend2" id=9]

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Death"

[sub_resource type="AnimationNodeBlend2" id=11]

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Move"

[sub_resource type="AnimationNodeBlend2" id=14]

[sub_resource type="AnimationNodeBlendTree" id=15]
graph_offset = Vector2( -600, -114.5 )
nodes/Blink/node = SubResource( 6 )
nodes/Blink/position = Vector2( -160, 380 )
nodes/BlinkOneShot/node = SubResource( 7 )
nodes/BlinkOneShot/position = Vector2( 140, 220 )
nodes/Dash/node = SubResource( 8 )
nodes/Dash/position = Vector2( -420, 240 )
nodes/DashBlend/node = SubResource( 9 )
nodes/DashBlend/position = Vector2( -80, 80 )
nodes/Death/node = SubResource( 10 )
nodes/Death/position = Vector2( 120, 440 )
nodes/DeathBlend/node = SubResource( 11 )
nodes/DeathBlend/position = Vector2( 360, 320 )
nodes/Idle/node = SubResource( 12 )
nodes/Idle/position = Vector2( -580, -20 )
nodes/Move/node = SubResource( 13 )
nodes/Move/position = Vector2( -580, 120 )
nodes/MovementBlend/node = SubResource( 14 )
nodes/MovementBlend/position = Vector2( -320, -40 )
nodes/output/position = Vector2( 600, 360 )
node_connections = [ "output", 0, "DeathBlend", "DashBlend", 0, "MovementBlend", "DashBlend", 1, "Dash", "DeathBlend", 0, "BlinkOneShot", "DeathBlend", 1, "Death", "BlinkOneShot", 0, "DashBlend", "BlinkOneShot", 1, "Blink", "MovementBlend", 0, "Idle", "MovementBlend", 1, "Move" ]

[sub_resource type="CircleShape2D" id=18]
radius = 5.38516

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 4, 4 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
bullet_reference = ExtResource( 3 )
melee_reference = ExtResource( 6 )
dash_effect = ExtResource( 7 )
death_effect = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 6

[node name="Gun" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 1 )
anims/Dash = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Move = SubResource( 5 )

[node name="AnimTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../Anim")
active = true
parameters/BlinkOneShot/active = false
parameters/DashBlend/blend_amount = 0
parameters/DeathBlend/blend_amount = 0.0
parameters/MovementBlend/blend_amount = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 18 )

[node name="MeleeBullets" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 17 )

[node name="Timers" type="Node" parent="."]

[node name="ReloadTimer" type="Timer" parent="Timers"]
wait_time = 0.2

[node name="ReloadMeleeTimer" type="Timer" parent="Timers"]
wait_time = 0.7

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="AfterDamageIFrameTimer" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="ShootSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -24.0

[node name="DashSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="Timers/ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="Timers/ReloadMeleeTimer" to="." method="_on_ReloadMeleeTimer_timeout"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="Timers/AfterDamageIFrameTimer" to="." method="_on_AfterDamageIFrameTimer_timeout"]
